@startuml

entity Mahasiswa {
  * nim VARCHAR(10) <<FK>>
  ---
  * nama VARCHAR(100)
  * jenis_kelamin ENUM('l','p')
  email VARCHAR(100)
  no_telp VARCHAR(15)
  ---
  * kode_jenjang VARCHAR(5) <<PK>>
  * kode_jurusan VARCHAR(5) <<PK>>
  * id_pekerjaan INT(3) <<PK>>
}

entity Jenjang {
  * kode VARCHAR(5) <<PK>>
  --
  * nama VARCHAR(100)
}

entity Jurusan {
  * kode VARCHAR(5) <<PK>>
  --
  * nama VARCHAR(100)
}


entity Pekerjaan {
  * kode INT(3) <<PK>>
  --
  * nama VARCHAR(100)
}

Mahasiswa }|--|| Jenjang
Mahasiswa }|--|| Jurusan
Mahasiswa }|--|| Pekerjaan

@enduml